--- a/backend/personal/public/assets/user/css/style.css
+++ b/backend/personal/public/assets/user/css/style.css
@@ -447,7 +447,7 @@ section {
 }
 
 .section-title {
-  text-align: center;
+  text-align: left;
   padding-bottom: 30px;
 }
 .section-title h2 {
@@ -460,7 +460,7 @@ section {
 }
 .section-title h2::after {
   content: "";
-  position: absolute;
+  position: left;
   display: block;
   width: 50px;
   height: 3px;
@@ -1107,7 +1107,7 @@ section {
   padding: 30px 0;
   color: #222222;
   font-size: 14px;
-  text-align: center;
+  text-align: left;
 }
 #footer .credits {
   padding-top: 5px;
