--- a/backend/personal/public/assets/user/css/style.css
+++ b/backend/personal/public/assets/user/css/style.css
@@ -9,7 +9,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "IBM Plex Sans", sans-serif;
   color: #444444;
   background-color: black;
 }
@@ -25,7 +25,7 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Raleway", sans-serif;
+  font-family: "IBM Plex Sans", sans-serif;
 }
 
 #main {
@@ -124,11 +124,11 @@ h1, h2, h3, h4, h5, h6 {
 #header .logo {
   font-size: 32px;
   margin: 0;
-  padding: 0;
+  padding-left: 100px;
   line-height: 1;
   font-weight: 400;
-  letter-spacing: 2px;
-  text-transform: uppercase;
+  letter-spacing: 1px;
+
 }
 #header .logo a {
   color: white;
@@ -146,7 +146,7 @@ h1, h2, h3, h4, h5, h6 {
 # Header Social Links
 --------------------------------------------------------------*/
 .header-social-links {
-  padding-right: 15px;
+  padding-right: 100px;
 }
 .header-social-links a {
   color: #6f6f6f;
@@ -184,7 +184,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-family: "Raleway", sans-serif;
+  font-family: "IBM Plex Sans", sans-serif;
   font-size: 15px;
   font-weight: 600;
   color: white;
@@ -373,7 +373,9 @@ h1, h2, h3, h4, h5, h6 {
   background-size: cover;
 }
 #hero .container {
-  padding-top: 70px;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-top: 10px;
   position: relative;
 }
 @media (max-width: 992px) {
@@ -383,21 +385,34 @@ h1, h2, h3, h4, h5, h6 {
 }
 #hero h1 {
   margin: 0;
+  padding-left: 0px;
   font-size: 48px;
   font-weight: 700;
   line-height: 56px;
   color: #222222;
 }
 #hero h2 {
+  padding-right: ;
   color: #6f6f6f;
-  margin: 10px 0 0 0;
+  margin-right: 10px;
+  margin-top: 10px;
   font-size: 22px;
 }
+
+#hero img {
+  border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
+  -ms-border-radius: 0.5rem;
+  -o-border-radius: 0.5rem;
+}
+
+
+
 #hero .btn-about {
-  font-family: "Raleway", sans-serif;
-  text-transform: uppercase;
+  font-family: "IBM Plex Sans", sans-serif;
   font-weight: 600;
-  font-size: 12px;
+  font-size: 20px;
   letter-spacing: 1px;
   display: inline-block;
   padding: 12px 40px;
@@ -405,10 +420,10 @@ h1, h2, h3, h4, h5, h6 {
   transition: 0.5s;
   margin-top: 30px;
   color: #fff;
-  background: #34b7a7;
+  background: #008000;
 }
 #hero .btn-about:hover {
-  background: #3dc8b7;
+  background: #008000;
 }
 @media (min-width: 1024px) {
   #hero {
