--- a/backend/personal/public/assets/admin/assets/css/app.css
+++ b/backend/personal/public/assets/admin/assets/css/app.css
@@ -27,7 +27,7 @@
   color: #2178d1;
 }
 * {
-  font-family: Raleway;
+  font-family: "IBM Plex Sans", sans-serif;
 }
 #app {
   position: relative;
@@ -1181,10 +1181,10 @@ footer {
   height: 1rem;
 }
 #auth {
-  background: #6c757d;
+  background: #008000;
   min-height: 100vh;
   padding-top: 100px;
-  background-image: url(../images/background/auth.jpg);
+  background-image: url(../images/background/auth2.jpg);
 }
 #auth .card {
   box-shadow: 0 5px 15px rgba(36, 104, 146, 0.6);
