--- a/backend/personal/public/assets/admin/assets/css/app.css
+++ b/backend/personal/public/assets/admin/assets/css/app.css
@@ -27,14 +27,14 @@
   color: #2178d1;
 }
 * {
-  font-family: "IBM Plex Sans", sans-serif;
+  font-family: Raleway;
 }
 #app {
   position: relative;
 }
 #main {
   margin-left: 260px;
-  background-color: #f7faff;
+  background-color: #ffffff;
   min-height: 100vh;
   transition: margin-left 0.6s ease-out;
 }
@@ -42,6 +42,7 @@
   padding: 2rem 1.5rem;
 }
 #main .main-content .page-title h3 {
+  color: #000;
   font-size: 2rem;
 }
 #main .main-content .text-subtitle {
@@ -78,7 +79,7 @@ section .section-title:after {
   height: 2px;
   content: "";
   margin: 0.6rem 0 1rem;
-  background-color: #5a8dee;
+  background-color: #BCF5BC;
   display: block;
 }
 a {
@@ -734,7 +735,7 @@ footer {
   opacity: 1;
 }
 .sidebar-wrapper .menu .sidebar-link > span {
-  color: #053382;
+  color: #000000;
   font-weight: 500;
   margin-left: 1rem;
   opacity: 0.8;
@@ -799,13 +800,13 @@ footer {
   margin-bottom: 2.2rem;
 }
 .card.card-statistic {
-  box-shadow: 1px 2px 5px rgba(47, 170, 244, 0.5);
-  background: linear-gradient(180deg, #25a6f1, #54b9ff);
+  box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.5);
+  background: linear-gradient(180deg, #D0F0C0, #D0F0C0);
   border: none;
 }
 .card.card-statistic .card-title {
   text-transform: uppercase;
-  color: #fff;
+  color: #333333;
   letter-spacing: 0.8px;
   font-weight: 400;
   font-size: 1.3rem;
@@ -1181,7 +1182,7 @@ footer {
   height: 1rem;
 }
 #auth {
-  background: #008000;
+  background: #6c757d;
   min-height: 100vh;
   padding-top: 100px;
   background-image: url(../images/background/auth2.jpg);
