--- a/backend/personal/public/assets/admin/assets/css/bootstrap.css
+++ b/backend/personal/public/assets/admin/assets/css/bootstrap.css
@@ -234,11 +234,11 @@ sup {
   top: -0.5em;
 }
 a {
-  color: #0d6efd;
+  color: #000000;
   text-decoration: underline;
 }
 a:hover {
-  color: #0a58ca;
+  color: #008000;
 }
 a:not([href]):not([class]),
 a:not([href]):not([class]):hover {
@@ -2643,15 +2643,15 @@ fieldset:disabled .btn {
 }
 .btn-primary {
   color: #000;
-  background-color: #5a8dee;
-  border-color: #5a8dee;
+  background-color: #008000;
+  border-color: #008000;
 }
 .btn-check:focus + .btn-primary,
 .btn-primary:focus,
 .btn-primary:hover {
   color: #000;
-  background-color: #739ef1;
-  border-color: #6b98f0;
+  background-color: #00d200;
+  border-color: #06d306;
 }
 .btn-check:focus + .btn-primary,
 .btn-primary:focus {
@@ -4125,7 +4125,7 @@ fieldset:disabled .btn {
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background-color: #fff;
+  background-color: #f5f5f5;
   background-clip: border-box;
   border: 0 solid #dfe3e7;
   border-radius: 0.267rem;
